# Xchain

./: .github_changelog_generator  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  appveyor.yml  book.toml  genkeypair.sh  pool-storage
.circleci/: config.yml
ci/: before_deploy.ps1  before_deploy.sh
demo/: Readme.md  demo-genesis.json  setup.sh
demo/template/: Dockerfile
proto/: node.proto  types.proto
src/: blockcfg.rs  blockchain.rs  client.rs  command_arguments.rs  lib.rs  main.rs  tpool.rs
src/blockchain/: chain.rs  mod.rs
src/clock/: configuration.rs
src/settings/: command_arguments.rs
