[package]
name = "xchain"
version = "0.0.1"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/youtubaijia/xchain"
homepage = "https://github.com/youtubaijia/xchain#README.md"
documentation = "https://github.com/youtubaijia/xchain#USAGE.md"
description = """
Midgard Serpent
"""


[dependencies]
log = "0.4"
dirs = "1.0"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
env_logger = "0.5"
humantime = "1.1"
cbor_event = "1.0"
cryptoxide = "0.1"
futures    = "0.1"
tokio      = "0.1"
structopt = "^0.2.12"
curve25519-dalek = "*"
sha2 = "^0.7"
digest = "^0.7"
generic-array = "^0.9"
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
xblockchain         = { path = "xblockchain-deps/xblockchain" }
protocol-tokio  = { path = "xblockchain-deps/protocol-tokio" }
exe-common      = { path = "xblockchain-deps/exe-common" }
xblockchain-storage = { path = "xblockchain-deps/storage" }
storage-units   = { path = "xblockchain-deps/storage-units" }

[dependencies.clap]
version = "2.32"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"
rev = "d1dfb573cd3d513720668894b23a58ae7299ed59"

[build-dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
rev = "d1dfb573cd3d513720668894b23a58ae7299ed59"
